                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.2.3

  [TS-1575] Ranges broken, "fix" by dsiabling
 
  *) [TS-1536] SNI support breaks IP-based lookup

  *) [TS-1523] High CPU on *BSD

  *) [TS-1522] improve RT on Cluster purge missing objects
   Author: Bin Chen

  *) [TS-1484] SSL-crashed every now and then with 3.2.0 + SNI-fixes

  *) [TS-1514] Fix collation in custom logging.
   Author: bettydramit

  *) [TS-1498] Fix header_filter plugin for ARM.

  *) [TS-1497] stats codes mess up when disk fail

  *) [TS-1436] Added Yahoo directory layout

  *) [TS-1474] disable ssl compression by default

  *) [TS-1472] Fix RAM cache stats for CLFUS.

  *) [TS-1430] Remove TS_ARG_MAX usage so that platforms with
  unlimited ARG_MAX can build correctly.

  *) [TS-1471] Fix SNI certificate fallback path

  *) [TS-1470] Fix cache sizes > 16TB
   Author: Jan Van Doorn <Jan_VanDoorn@cable.comcast.com>

Changes with Apache Traffic Server 3.2.1

  *) [TS-1358] Don't link libreadline with all binaries and plugins.

  *) [TS-1374] Cert path not working using intermdiate certificate

  *) [TS-1373] Silence spurious error when adding SSL certificates with alternate names

  *) [TS-1338] SSL not handling some events properly

  *) [TS-1362] Allow to open cache disk without O_DIRECT, for e.g. tmpfs
   "disk" cache.

  *) [TS-1361] Fix a endless loop in CacheVC::removeEvent.
   Author: weijin & Hua Cai

  *) [TS-1359] Don't assume root privileges during make install.
   Author: Jan-Frode Myklebust

  *) [TS-1357] Don't link libz / liblmza with all binaries and plugins.

  *) [TS-1360] Fix WCCP build issues on FBSD.

  *) [TS-1367] Prevent range acceleration for cluster and objects with
     more than one alternate.


Changes with Apache Traffic Server 3.2.0

  *) [TS-1286] Cleanup some code around freelists and allocators.


Changes with Apache Traffic Server 3.1.4

  *) [TS-1281] make check fail on RHEL 5.x.
