@@ -41,17 +41,6 @@ A list of all bugs open for the next development release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  Fix ARM build failures by adding ARM barrier intrinsics which actually do
-  something. This fixes build failues on the ARM port after promoting the
-  header filter module to main. The patch denoted below originally was
-  contributed by a Debian porter. The original issue was discussed in TS-1473.
-  A no-op fix was proposed to be backported and committed as TS-1498. However,
-  later TS-1560 was committed to trunk as an improved version of the same
-  problem.
-  Jira: https://issues.apache.org/jira/browse/TS-1585
-  Patch: 23feb5106ffda71712b0f94a8b3242ecd51a4d9a
-  +1: igalic, zwoop, arno
-
   Mutex leak fix
   Patch: db0cfd44222e5e280db5b832496691ec7722e28e
   Jira: https://issues.apache.org/jira/browse/TS-1652
