@@ -45,10 +45,10 @@
 #define rmb() __asm__ __volatile__ ( "lfence" : : : "memory")
 #define wmb() __asm__ __volatile__ ( "" : : : "memory")
 #elif defined(__arm__)
-/* ToDo: Anything? */
-#define mb()
-#define rmb()
-#define wmb()
+#define mb()  __asm__ __volatile__ ( "dmb" : : : "memory")
+#define rmb() __asm__ __volatile__ ( "dmb" : : : "memory")
+#define wmb() __asm__ __volatile__ ( "" : : : "memory")
+#elif defined(__arm__)
 #else
 #error "Define barriers"
 #endif
